Added Astra DB, Bulk Insert, Cursor and Batching of records

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ HCD_API_ENDPOINT=http://localhost:8181
 HCD_USERNAME=your_username
 HCD_PASSWORD=your_password
 HCD_KEYSPACE=default_keyspace
+
+# Astra DB configuration
+ASTRA_DB_ID=your_db_id
+ASTRA_DB_REGION=your_db_region
+ASTRA_DB_TOKEN=your_db_token
+ASTRA_DB_KEYSPACE=your_keyspace
